k8s/backend-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-canary
  namespace: dev
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
